# Printf

./: CMakeLists.txt  Makefile  README.md  a.out  extract_func_0.c  extract_func_1.c  extract_func_2.c  extract_func_3.c  extract_func_4.c  extract_func_5.c  extract_func_6.c  extract_func_7.c  extract_func_8.c  extract_func_9.c  ft_addustring.c  ft_chartostr.c  ft_convert.c  ft_ditoap.c  ft_fieldflags.c  ft_fieldflags_additional.c  ft_flags.c  ft_freearr.c  ft_litoa.c  ft_malloc.c  ft_memdelzero.c  ft_modfunc.c  ft_parce.c  ft_powl.c  ft_presicion.c  ft_printf.c  ft_strdupfree.c  ft_strjoinfree.c  ft_strndupfree.c  ft_ubase.c  ft_ulitoa.c  ft_unicode.c  ft_validflag.c  header.h  main_2.c  try1.out  (+1 more)
includes/: header.h
libft/: ft_numsize.c  ft_strcat.c
tests/: HHmy.res  lallmaxtest.my  lotest.my  testeasystart.my  zconv.my
