cmake_minimum_required(VERSION 3.9)
project(UNIT1303)

set(CMAKE_CXX_STANDARD 11)

add_executable(UNIT1303
        libft/ft_abs.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_numsize.c
        libft/ft_pow.c
        libft/ft_printlst.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        extract_func_0.c
        extract_func_1.c
        extract_func_2.c
        extract_func_3.c
        extract_func_4.c
        extract_func_5.c
        extract_func_6.c
        extract_func_7.c
        extract_func_8.c
        extract_func_9.c
        ft_convert.c
        ft_ditoap.c
        ft_fieldflags.c
        ft_flags.c
        ft_freearr.c
        ft_litoa.c
        ft_modfunc.c
        ft_parce.c
        ft_powl.c
        ft_printf.c
        ft_ubase.c
        ft_ulitoa.c
        ft_unicode.c
        ft_validflag.c
        header.h
        main_2.c ft_chartostr.c ft_strjoinfree.c ft_addustring.c ft_fieldflags_additional.c)
